--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
-    "monk": "^7.3.2",
-    "morgan": "^1.10.0",
-    "yup": "^0.29.3"
+    "mongoose": "^5.10.12",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
